<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.avshukan.game15.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/textHelloWorld" />

    <Button
        android:text="@string/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHelloWorld"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="17dp"
        android:id="@+id/button" />

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_marginLeft="66dp"
        android:layout_marginStart="66dp"
        android:id="@+id/button2" />

    <Button
        android:text="@string/N02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonN02"
        android:layout_alignBaseline="@+id/buttonN01"
        android:layout_alignBottom="@+id/buttonN01"
        android:layout_toRightOf="@+id/buttonN01"
        android:onClick="onButtonNClick" />

    <Button
        android:text="@string/N01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/buttonN01"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonNClick" />

    <Button
        android:text="@string/N04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/N03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_alignBaseline="@+id/buttonN02"
        android:layout_alignBottom="@+id/buttonN02"
        android:layout_toRightOf="@+id/buttonN02"
        android:layout_toEndOf="@+id/buttonN02" />

    <Button
        android:text="@string/N05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonN02"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/button7" />

    <Button
        android:text="@string/N06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:id="@+id/button8" />

    <Button
        android:text="@string/N08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:id="@+id/button10" />

    <Button
        android:text="@string/N09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/button11" />

    <Button
        android:text="@string/N10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button11"
        android:layout_alignRight="@+id/button8"
        android:layout_alignEnd="@+id/button8"
        android:id="@+id/button12" />

    <Button
        android:text="@string/N11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button12"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:id="@+id/button13" />

    <Button
        android:text="@string/N12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button13"
        android:layout_toRightOf="@+id/button13"
        android:layout_toEndOf="@+id/button13"
        android:id="@+id/button14" />

    <Button
        android:text="@string/N07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_toRightOf="@+id/button8"
        android:layout_toEndOf="@+id/button8" />

    <Button
        android:text="@string/N14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button15"
        android:layout_toRightOf="@+id/button15"
        android:layout_toEndOf="@+id/button15"
        android:id="@+id/button16" />

    <Button
        android:text="@string/N15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button16"
        android:layout_toLeftOf="@+id/button14"
        android:layout_toStartOf="@+id/button14"
        android:id="@+id/button17" />

    <Button
        android:text="@string/N00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button17"
        android:layout_toRightOf="@+id/button17"
        android:layout_toEndOf="@+id/button17"
        android:id="@+id/button18" />

    <Button
        android:text="@string/N13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/button15"
        android:layout_below="@+id/button11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
